--- a/fBReader/src/main/res/values/strings.xml
+++ b/fBReader/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name">FBReader</string>
+	<string name="app_name">英文原著阅读</string>
 	<string name="empty_string"></string>
 </resources>
